<resources>
    <string name="app_name">Go Safe</string>
    <string name="go_safe">Go Safe</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_vehicle_number">Enter your Vehicle Number</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="medical_record">Medical Record</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="allergy_medicine">Allergy Medicine</string>
    <string name="medical_history">Medical History</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="gender_eg_male_female">Gender (eg:male/female)</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="relationship">Relationship</string>
    <string name="bloodgroup_eg_b_ve">Bloodgroup (eg:B+ve)</string>
    <string name="mob">mobile_no</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="nxt">Next</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="share">Share</string>
    <string name="vehicle_number">vehicle Number</string>
    <string name="locationpermstitle">Location permission</string>
    <string name="title_activity_maps">Map</string>
</resources>
