<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_medical_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/medical_record"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/name"
                android:src="@drawable/ic_account" />

            <EditText
                android:id="@+id/et_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/age"
                android:src="@drawable/ic_human" />


            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/age"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/gender"
                android:src="@drawable/ic_gender_male_female" />


            <EditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/gender_eg_male_female"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_blood_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/blood_group"
                android:src="@drawable/ic_account_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/blood_group"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/et_blood_group"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_vehicle_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/mob"
                android:src="@drawable/ic_action_car" />

            <EditText
                android:id="@+id/et_vehicle_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/vehicle_number"
                android:inputType="textCapSentences"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/mob"
                android:src="@drawable/ic_mobile" />

            <EditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_allergy_medicine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/allergy_medicine"
                android:src="@drawable/ic_pill" />

            <EditText
                android:id="@+id/et_allergy_medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/allergy_medicine"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_medical_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/medical_history"
                android:src="@drawable/ic_medical_bag" />


            <EditText
                android:id="@+id/et_medical_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/medical_history"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/address"
                android:src="@drawable/ic_account_location" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />
        </LinearLayout>


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/nxt" />

    </LinearLayout>
</ScrollView>
